<resources>
    <string name="app_name">LoginJooto</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">"Forgot password"</string>
    <string name="login_with_google">"Login with Google"</string>
    <string name="login_with_facebook">"Login with Facebook"</string>
</resources>
