<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.loginjooto.ui.login.LoginViewModel"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_56"
            android:background="@color/colorText"
            android:elevation="@dimen/elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_38"
                android:gravity="center"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorLogin"
                android:textSize="@dimen/text_size_login"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </android.support.constraint.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/image_jooto"
            android:layout_height="@dimen/image_jooto"
            android:layout_marginTop="@dimen/dp_36"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_76"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:hint="@string/prompt_email"
            android:text="@={viewModel.email}"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_76"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:hint="@string/prompt_password"
            android:text="@={viewModel.passWord}"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"/>

        <Button
            android:id="@+id/login"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="start"
            android:layout_marginEnd="@dimen/dp_22"
            android:layout_marginStart="@dimen/dp_22"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/colorLoginButton"
            android:text="@string/action_sign_in"
            android:textColor="@color/colorText"
            android:textSize="@dimen/sp_14"
            android:onClick="@{()->viewModel.login()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"/>

        <TextView
            android:id="@+id/tvFogot"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginRight="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_18"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/colorForgotpassword"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_23"
            android:layout_marginRight="@dimen/dp_21"
            android:layout_marginTop="@dimen/dp_26"
            android:background="@drawable/bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFogot">

            <TextView
                android:id="@+id/btLoginGg"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_14"
                android:text="@string/login_with_google"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivGoogle"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/ivGoogle"
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:layout_marginLeft="@dimen/dp_105"
                android:src="@drawable/ic_logo_google"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:background="#000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btLoginGg"
                app:layout_constraintStart_toStartOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/fb"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_23"
            android:layout_marginRight="@dimen/dp_21"
            android:layout_marginTop="@dimen/dp_4"
            android:background="@color/colorLoginFacebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <ImageView
                android:id="@+id/ivFb"
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:layout_marginBottom="@dimen/dp_11"
                android:layout_marginLeft="@dimen/dp_98"
                android:layout_marginTop="@dimen/dp_11"
                android:src="@drawable/ic_fb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/button2"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_15"
                android:layout_marginLeft="@dimen/dp_21"
                android:layout_marginTop="@dimen/dp_11"
                android:text="@string/login_with_facebook"
                android:textColor="@color/colorText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivFb"
                app:layout_constraintTop_toTopOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</layout>